Making the output compatible with Joseki